--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -129,7 +129,47 @@
     </div>
 
     <div class="space"></div>
-    <div class="space2"></div>
+
+    <div class="news">
+        <div class="news-title"><span class="txt1">Latest News & Updates</span>
+            <span class="txt2">See a Video Review of Our Cutest Pets!</span>
+            <iframe width="1280" height="760" src="https://www.youtube.com/embed/qRHoSWpkbBo" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+        </div>
+
+        <div class="news-content">
+            <div class="img1">
+                <img src="assets/asset 16.jpeg" alt="">
+                <span>New Advancements in the Veterinary Industry</span>
+            </div>
+            <div class="img2">
+                <img src="assets/asset 17.jpeg" alt="">
+                <span>Do Dogs Hate It When You Hug Them?</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="awards">
+        <img src="assets/asset 18.jpeg" alt="">
+    </div>
+
+    <div class="instagram-txt">
+        <span class="txt1">
+            See Our Adorable Pets @Instagram!
+        </span>
+    </div>
+
+    <div class="img-wall">
+        <img src="assets/asset 5.jpeg" alt="">
+        <img src="assets/asset 6.jpeg" alt="">
+        <img src="assets/asset 7.jpeg" alt="">
+        <img src="assets/asset 8.jpeg" alt="">
+    </div>
+
+    <div class="footer">
+        <img src="assets/asset 19.jpeg" alt="">
+    </div>
 
 
 </body>
