--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="all.css">
+    <script src="https://kit.fontawesome.com/05c128ff7b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -169,9 +170,31 @@
 
     <div class="footer">
         <img src="assets/asset 19.jpeg" alt="">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <a href=""><img src="assets/asset 0.png"></a>
+                <a href="" class="title">Anilove</a>
+            </div>
+            <div class="footer-icon">
+                <a href=""><i class="fab fa-twitter-square"></i></a>
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-pinterest-square"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+            </div>
+            <div class="footer-txt">
+                <span>Paid for by the ConLiberal NATIONAL COMMITTEE</span>
+                <div class="tel">
+                    <i class="fas fa-phone-alt"></i>
+                    <span>(123) 456-7890</span>
+                </div>
+                <div class="address">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <span>ConLiberal NATIONAL COMMITTEE 430 South Capitol Street Southeast Washington, DC 20003</span>
+                </div>
+                <span>2020 © Anilove. All rights reserved. </span>
+            </div>
+        </div>
     </div>
-
-
 </body>
 
 </html>
