change index content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="BSHomeWork1/index.html">作業01：表格課表</a>
         </li>
         <li>
-            <a href="BSHomeWork2/index.html">作業02：網頁切版</a>
+            <a href="BSHomeWork2/index.html">作業02：小貓網站</a>
         </li>
     </ul>
 </body>
