--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+    <div class="tel-button">
+        <div class="container">
+            <i class="fas fa-phone-alt"></i>
+        </div>
+    </div>
+
+    <div class="back-to-top">
+        <div class="container">
+            <a href="#">↑</a>
+        </div>
+    </div>
+
     <div class="header">
         <div class="tel">
             <img src="assets/asset 21.svg" width="50px" height="50px">
