作業2 變更影片內容

--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -146,9 +146,9 @@
     <div class="news">
         <div class="news-title"><span class="txt1">Latest News & Updates</span>
             <span class="txt2">See a Video Review of Our Cutest Pets!</span>
-            <iframe width="1280" height="760" src="https://www.youtube.com/embed/qRHoSWpkbBo" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
+            <video width="1280" height="760" controls
+                src="http://template73996.motopreview.com/mt-demo/73900/73996/mt-content/uploads/2018/10/plaza_time_lapse-1.mp4">
+            </video>
         </div>
 
         <div class="news-content">
