--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div class="banner">
+    <div class="navi">
         <div class="logo">
             <a href=""><img src="assets/asset 0.png"></a>
             <a href="" class="title">Anilove</a>
