--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -88,17 +88,18 @@
                 <span class="item2">There Are Countless Ways You Can Join In & Help Us!</span>
             </div>
             <div class="help-img">
-                <div class="img1">
+                <div class="item item1">
+                    <span class="img-txt">Volunteer</span>
                     <img src="assets/asset 10.jpeg" alt="">
-                    <span class="img-txt1">Volunteer</span>
                 </div>
-                <div class="img2">
+                <div></div>
+                <div class="item item2">
+                    <span class="img-txt">Adopt</span>
                     <img src="assets/asset 11.jpeg" alt="">
-                    <span class="img-txt2">Adopt</span>
                 </div>
-                <div class="img3">
+                <div class="item item3">
+                    <span class="img-txt">Sponsor</span>
                     <img src="assets/asset 12.jpeg" alt="">
-                    <span class="img-txt3">Sponsor</span>
                 </div>
             </div>
         </div>
