新增news圖片、修改

--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <div class="tel-button">
+    <div class="float-tel-button">
         <div class="container">
             <i class="fas fa-phone-alt"></i>
         </div>
     </div>
 
-    <div class="back-to-top">
+    <div class="float-back-to-top">
         <div class="container">
             <a href="#">↑</a>
         </div>
@@ -24,14 +24,23 @@
 
     <div class="header">
         <div class="tel">
-            <img src="assets/asset 21.svg" width="50px" height="50px">
-            <span>Toll-free: (123) 456-7890</span>
+            <i class="fas fa-phone-alt"></i>
+            <span>Toll-free:</span>
+            <a href="" class="tel-num">(123) 456-7890</a>
         </div>
         <div class="community">
-            <a href=""><img src="assets/asset 20.svg" width="20px" height="20px" alt=""></a>
-            <a href=""><img src="assets/asset 21.svg" width="20px" height="20px" alt=""></a>
-            <a href=""><img src="assets/asset 22.svg" width="20px" height="20px" alt=""></a>
-            <a href=""><img src="assets/asset 23.svg" width="20px" height="20px" alt=""></a>
+            <div class="icon">
+                <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="fab fa-facebook"></i></a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="fab fa-pinterest"></i></a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="fab fa-linkedin-in"></i></a>
+            </div>
         </div>
     </div>
 
@@ -48,7 +57,7 @@
             <a href="">Contacts</a>
         </nav>
         <div class="btn-donate">
-            <button>DONATE NOW!</button>
+            <input type="button" value="DONATE NOW!" class="button">
         </div>
     </div>
 
@@ -150,16 +159,31 @@
             <video width="1280" height="760" controls
                 src="http://template73996.motopreview.com/mt-demo/73900/73996/mt-content/uploads/2018/10/plaza_time_lapse-1.mp4">
             </video>
+
         </div>
 
         <div class="news-content">
-            <div class="img1">
+            <div class="container img1">
                 <img src="assets/asset 16.jpeg" alt="">
-                <span>New Advancements in the Veterinary Industry</span>
+                <div class="article">
+                    <img src="assets/asset 24.jpg" alt="">
+                    <div class="author">
+                        <span class="date">18 Sept, by </span>
+                        <span class="name">Jennifer Moreno</span>
+                    </div>
+                    <span class="title">New Advancements in the Veterinary Industry</span>
+                </div>
             </div>
-            <div class="img2">
+            <div class="container img2">
                 <img src="assets/asset 17.jpeg" alt="">
-                <span>Do Dogs Hate It When You Hug Them?</span>
+                <div class="article">
+                    <img src="assets/asset 25.jpg" alt="">
+                    <div class="author">
+                        <span class="date">18 Sept, by </span>
+                        <span class="name">Jennifer Moreno</span>
+                    </div>
+                    <span class="title">Do Dogs Hate It When You Hug Them?</span>
+                </div>
             </div>
         </div>
     </div>
