獎項紀錄加上圖片

--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -189,7 +189,31 @@
     </div>
 
     <div class="awards">
-        <img src="assets/asset 18.jpeg" alt="">
+        <div class="bg-img">
+            <img src="assets/asset 18.jpeg" alt="">
+        </div>
+        <div class="container">
+            <div class="item">
+                <img src="assets/asset 26.jpg" alt="">
+                <span class="record">1000</span>
+                <span>Pets</span>
+            </div>
+            <div class="item">
+                <img src="assets/asset 27.jpg" alt="">
+                <span class="record">20</span>
+                <span>Awards</span>
+            </div>
+            <div class="item">
+                <img src="assets/asset 28.jpg" alt="">
+                <span class="record">100</span>
+                <span>Staffers</span>
+            </div>
+            <div class="item">
+                <img src="assets/asset 29.jpg" alt="">
+                <span class="record">1200</span>
+                <span>Contributors</span>
+            </div>
+        </div>
     </div>
 
     <div class="instagram-txt">
