--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="all.css">
     <script src="https://kit.fontawesome.com/05c128ff7b.js" crossorigin="anonymous"></script>
+    <link rel="Shortcut Icon" type="image/x-icon" href="assets/asset 0.png" />
 </head>
 
 <body>
