--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -34,10 +34,10 @@
                 <a href=""><i class="fab fa-twitter"></i></a>
             </div>
             <div class="icon">
-                <a href=""><i class="fab fa-facebook"></i></a>
+                <a href=""><i class="fab fa-facebook-f"></i></a>
             </div>
             <div class="icon">
-                <a href=""><i class="fab fa-pinterest"></i></a>
+                <a href=""><i class="fab fa-pinterest-p"></i></a>
             </div>
             <div class="icon">
                 <a href=""><i class="fab fa-linkedin-in"></i></a>
