修改icon超連結範圍

--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -30,18 +30,26 @@
             <a href="" class="tel-num">(123) 456-7890</a>
         </div>
         <div class="community">
-            <div class="icon">
-                <a href=""><i class="fab fa-twitter"></i></a>
-            </div>
-            <div class="icon">
-                <a href=""><i class="fab fa-facebook-f"></i></a>
-            </div>
-            <div class="icon">
-                <a href=""><i class="fab fa-pinterest-p"></i></a>
-            </div>
-            <div class="icon">
-                <a href=""><i class="fab fa-linkedin-in"></i></a>
-            </div>
+            <a href="">
+                <div class="icon">
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </a>
+            <a href="">
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                </div>
+            </a>
+            <a href="">
+                <div class="icon">
+                    <i class="fab fa-pinterest-p"></i>
+                </div>
+            </a>
+            <a href="">
+                <div class="icon">
+                    <i class="fab fa-linkedin-in"></i>
+                </div>
+            </a>
         </div>
     </div>
 
