--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -30,26 +30,18 @@
             <a href="" class="tel-num">(123) 456-7890</a>
         </div>
         <div class="community">
-            <a href="">
-                <div class="icon">
-                    <i class="fab fa-twitter"></i>
-                </div>
-            </a>
-            <a href="">
-                <div class="icon">
-                    <i class="fab fa-facebook-f"></i>
-                </div>
-            </a>
-            <a href="">
-                <div class="icon">
-                    <i class="fab fa-pinterest-p"></i>
-                </div>
-            </a>
-            <a href="">
-                <div class="icon">
-                    <i class="fab fa-linkedin-in"></i>
-                </div>
-            </a>
+            <div class="icon">
+                <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="fab fa-facebook-f"></i></a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="fab fa-pinterest-p"></i></a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="fab fa-linkedin-in"></i></a>
+            </div>
         </div>
     </div>
 
@@ -100,25 +92,23 @@
     </div>
 
     <div class="help">
-        <div class="help-content">
-            <div class="help-txt">
-                <span class="item1">How You Can Help</span>
-                <span class="item2">There Are Countless Ways You Can Join In & Help Us!</span>
+        <div class="help-txt">
+            <span class="item1">How You Can Help</span>
+            <span class="item2">There Are Countless Ways You Can Join In & Help Us!</span>
+        </div>
+        <div class="help-img">
+            <div class="item item1">
+                <span class="img-txt">Volunteer</span>
+                <img src="assets/asset 10.jpeg" alt="">
             </div>
-            <div class="help-img">
-                <div class="item item1">
-                    <span class="img-txt">Volunteer</span>
-                    <img src="assets/asset 10.jpeg" alt="">
-                </div>
-                <div></div>
-                <div class="item item2">
-                    <span class="img-txt">Adopt</span>
-                    <img src="assets/asset 11.jpeg" alt="">
-                </div>
-                <div class="item item3">
-                    <span class="img-txt">Sponsor</span>
-                    <img src="assets/asset 12.jpeg" alt="">
-                </div>
+            <div></div>
+            <div class="item item2">
+                <span class="img-txt">Adopt</span>
+                <img src="assets/asset 11.jpeg" alt="">
+            </div>
+            <div class="item item3">
+                <span class="img-txt">Sponsor</span>
+                <img src="assets/asset 12.jpeg" alt="">
             </div>
         </div>
     </div>
