照片牆instagram連結效果

--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -222,10 +222,22 @@
     </div>
 
     <div class="img-wall">
-        <img src="assets/asset 5.jpeg" alt="">
-        <img src="assets/asset 6.jpeg" alt="">
-        <img src="assets/asset 7.jpeg" alt="">
-        <img src="assets/asset 8.jpeg" alt="">
+        <div class="photo">
+            <img src="assets/asset 5.jpeg" alt="dog">
+            <a href="https://www.instagram.com/p/BVCkmfnF8di/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+        <div class="photo">
+            <img src="assets/asset 6.jpeg" alt="cat">
+            <a href="https://www.instagram.com/p/BVCklLUFQuc/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+        <div class="photo">
+            <img src="assets/asset 7.jpeg" alt="dog">
+            <a href="https://www.instagram.com/p/BVCkimWl71g/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+        <div class="photo">
+            <img src="assets/asset 8.jpeg" alt="cat">
+            <a href="https://www.instagram.com/p/BVCkggnlT5G/" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
     </div>
 
     <div class="footer">
