--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -155,12 +155,10 @@
     <div class="news">
         <div class="news-title"><span class="txt1">Latest News & Updates</span>
             <span class="txt2">See a Video Review of Our Cutest Pets!</span>
-            <video width="1280" height="760" controls
+            <video width="62%" controls
                 src="http://template73996.motopreview.com/mt-demo/73900/73996/mt-content/uploads/2018/10/plaza_time_lapse-1.mp4">
             </video>
-
         </div>
-
         <div class="news-content">
             <div class="container img1">
                 <img src="assets/asset 16.jpeg" alt="">
