--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
             <li>
                 <a href="BSHomeWork2/index.html" target="_blank">作業02：Anilove網站切版</a>
             </li>
+            <li>
+                <a href="BSHomeWork3/index.html" target="_blank">作業03：Naturio網站切版</a>
+            </li>
         </ul>
     </div>
 
