作業3 header切版完成

--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -5,11 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/05c128ff7b.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="all.css">
 </head>
 
 <body>
-
+    <header>
+        <div class="container item1">
+            <div class="sale-bar">
+                <div class="header-onsale">
+                    Last sale up to <b>20% OFF</b>. Use code <b>“SALE70”.</b>
+                </div>
+                <nav class="header-member">
+                    <a href="">COMPARE</a>
+                    <a href="">WISHLIST</a>
+                    <a href="">LOGIN</a>
+                    <div class="cart">
+                        <i class="fas fa-shopping-cart"><span>CART:</span></i>
+                        <span class="count">0</span>
+                    </div>
+                    <form class="header-currency">
+                        <select name="currency">
+                            <option value="USD">USD,$</option>
+                            <option value="GBP">GBP,£</option>
+                        </select>
+                    </form>
+                </nav>
+            </div>
+        </div>
+        <div class="container item2">
+            <div class="logo-bar">
+                <div class="header-logo">
+                    <a href=""><img src="img/logo.webp" alt="Naturio"></a>
+                </div>
+                <nav class="header-navi">
+                    <a href="#">HOME</a>
+                    <a href="#">ABOUT</a>
+                    <a href="#">FEATURES ▼</a>
+                    <a href="#">BLOG ▼</a>
+                    <a href="#">SHOP ▼</a>
+                    <a href="#">CONTACTS</a>
+                </nav>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
