--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/05c128ff7b.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="all.css">
 </head>
 
@@ -37,7 +37,7 @@
         <div class="container item2">
             <div class="logo-bar">
                 <div class="header-logo">
-                    <a href=""><img src="img/logo.webp" alt="Naturio"></a>
+                    <a href=""><img src="img/logo.png" alt="Naturio"></a>
                 </div>
                 <nav class="header-navi">
                     <a href="#">HOME</a>
@@ -50,6 +50,19 @@
             </div>
         </div>
     </header>
+    <div class="shop-onsale">
+        <div class="shop-onsale-bg">
+            <img src="img/bg1.jpg" alt="green leaves">
+        </div>
+        <div class="container">
+            <div class="shop-onsale-title">
+                <h1>Green Leaves Up To <span>20% Off</span></h1>
+                <h3>Always Fresh, Crispy and Full of Vitamins</h3>
+                <a href="">ADD TO CART</a>
+            </div>
+            <div class="wrap"></div>
+        </div>
+    </div>
 </body>
 
 </html>
