--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -63,6 +63,42 @@
             <div class="wrap"></div>
         </div>
     </div>
+
+    <div class="welcome">
+        <div class="container">
+            <div class="title">
+                <h2>Welcome to our healthy farm!</h2>
+            </div>
+            <div class="introduction">
+                <div class="item">
+                    <img src="img/1.png" alt="1.">
+                    <h4>Best Quality Products</h4>
+                    <p>We stand for providing the most fresh organic products which will serve your health and be a
+                        source of vitamins and minerals for our clients.</p>
+                </div>
+                <div class="item">
+                    <img src="img/2.png" alt="2.">
+                    <h4>Farmer Products</h4>
+                    <p>We work with many farms to provide you with natural products grown with love and care with no GMO
+                        or pesticides.</p>
+                </div>
+                <div class="item">
+                    <img src="img/3.png" alt="3.">
+                    <h4>Fast Delivery</h4>
+                    <p>We want our client to receive their fresh products as soon as possible, so we process and ship
+                        the order at once.</p>
+                </div>
+            </div>
+            <div class="img-wall">
+                <a href="">
+                    <img src="img/banners1.jpg" alt="農產品20%OFF">
+                </a>
+                <a href="">
+                    <img src="img/banners.jpg" alt="New Essentials">
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
