welcome圖片牆特效完成

--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -91,9 +91,15 @@
             </div>
             <div class="img-wall">
                 <a href="">
+                    <div class="img-overlay">
+                        <div class="overlay-line"></div>
+                    </div>
                     <img src="img/banners1.jpg" alt="農產品20%OFF">
                 </a>
                 <a href="">
+                    <div class="img-overlay">
+                        <div class="overlay-line"></div>
+                    </div>
                     <img src="img/banners.jpg" alt="New Essentials">
                 </a>
             </div>
