--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -105,6 +105,88 @@
             </div>
         </div>
     </div>
+
+    <div class="products">
+        <div class="container">
+            <h3>Our Products</h3>
+            <div class="products-list-box">
+                <div class="list">NEW ARRIVALS</div>
+                <div class="list">ORGANIC & NATURAL</div>
+                <div class="list">THE FARM STORY</div>
+                <div class="list">PLUM CAKE</div>
+            </div>
+
+            <div class="products-wall">
+                <div class="products-item">
+                    <img src="img/Organic-Beetroot-1kg-300x300.png" alt="Organic Beetroot">
+                    <span class="onsale">SALE!</span>
+                    <div class="product-content">
+                        <h5 class="categories">Organic, Vegetable, Fruit</h5>
+                        <h3>Organic Beetroot</h3>
+                        <span class="price"><strike>4.99$</strike> 2.56$</span>
+                    </div>
+                </div>
+                <div class="products-item">
+                    <img src="img/Organic-Cauliflower-300x300.png" alt="Organic Cauliflower">
+                    <span class="featured">FEATURED</span>
+                    <div class="product-content">
+                        <h5 class="categories">Organic, Fruit, Packaged Meals, Baking</h5>
+                        <h3>Organic Cauliflower</h3>
+                        <span class="price">7.88$</span>
+                    </div>
+                </div>
+                <div class="products-item">
+                    <img src="img/Organic-Fennel-300x300.png" alt="">
+                    <div class="product-content">
+                        <h5 class="categories">Organic, Vegetable, Fruit</h5>
+                        <h3>Organic Fennel</h3>
+                        <span class="price">4.81$</span>
+                    </div>
+                </div>
+                <div class="products-item">
+                    <img src="img/Organic-Jap-Pumpkin-1kg-300x300.png" alt="">
+                    <div class="product-content">
+                        <h5 class="categories">Organic, Vegetable</h5>
+                        <h3>Organic Jap Pumpkin 1kg</h3>
+                        <span class="price">9.88$</span>
+                    </div>
+                </div>
+                <div class="products-item">
+                    <img src="img/Organic-Kiwi-Fruit-500g-300x300.png" alt="">
+                    <div class="product-content">
+                        <h5 class="categories">Organic, Fruit, Packaged Meals</h5>
+                        <h3>Organic Kiwi Fruit 500g</h3>
+                        <span class="price">6.88$</span>
+                    </div>
+                </div>
+                <div class="products-item">
+                    <img src="img/Organic-Mushrooms-150g-300x300.png" alt="">
+                    <div class="product-content">
+                        <h5 class="categories">Organic, Vegetable, Fruit, Baking</h5>
+                        <h3>Organic Mushrooms, 250g</h3>
+                        <span class="price">3.13$</span>
+                    </div>
+                </div>
+                <div class="products-item">
+                    <img src="img/Organic-Parsley-300x300.png" alt="">
+                    <div class="product-content">
+                        <h5 class="categories">Organic, Vegatable, Fruit, Packaged Meals</h5>
+                        <h3>Organic Parsley</h3>
+                        <span class="price">2.25$</span>
+                    </div>
+                </div>
+                <div class="products-item">
+                    <img src="img/Organic-Sebago-Potatoes-1kg-300x300.png" alt="">
+                    <span class="featured">FEATURED</span>
+                    <div class="product-content">
+                        <h5 class="categories">Organic, Vegetable, Fruit</h5>
+                        <h3>Organic Sebago Potatoes</h3>
+                        <span class="price">2.50$ - 7.50$</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
