--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -108,7 +108,7 @@
 
     <div class="products">
         <div class="container">
-            <h3>Our Products</h3>
+            <h3 class="title">Our Products</h3>
             <div class="products-list-box">
                 <div class="list">NEW ARRIVALS</div>
                 <div class="list">ORGANIC & NATURAL</div>
@@ -118,8 +118,10 @@
 
             <div class="products-wall">
                 <div class="products-item">
-                    <img src="img/Organic-Beetroot-1kg-300x300.png" alt="Organic Beetroot">
-                    <span class="onsale">SALE!</span>
+                    <a href="">
+                        <img src="img/Organic-Beetroot-1kg-300x300.png" alt="Organic Beetroot">
+                        <span class="onsale">SALE!</span>
+                    </a>
                     <div class="product-content">
                         <h5 class="categories">Organic, Vegetable, Fruit</h5>
                         <h3>Organic Beetroot</h3>
@@ -127,8 +129,10 @@
                     </div>
                 </div>
                 <div class="products-item">
-                    <img src="img/Organic-Cauliflower-300x300.png" alt="Organic Cauliflower">
-                    <span class="featured">FEATURED</span>
+                    <a href="">
+                        <img src="img/Organic-Cauliflower-300x300.png" alt="Organic Cauliflower">
+                        <span class="featured">FEATURED</span>
+                    </a>
                     <div class="product-content">
                         <h5 class="categories">Organic, Fruit, Packaged Meals, Baking</h5>
                         <h3>Organic Cauliflower</h3>
@@ -136,7 +140,9 @@
                     </div>
                 </div>
                 <div class="products-item">
-                    <img src="img/Organic-Fennel-300x300.png" alt="">
+                    <a href="">
+                        <img src="img/Organic-Fennel-300x300.png" alt="">
+                    </a>
                     <div class="product-content">
                         <h5 class="categories">Organic, Vegetable, Fruit</h5>
                         <h3>Organic Fennel</h3>
@@ -144,7 +150,9 @@
                     </div>
                 </div>
                 <div class="products-item">
-                    <img src="img/Organic-Jap-Pumpkin-1kg-300x300.png" alt="">
+                    <a href="">
+                        <img src="img/Organic-Jap-Pumpkin-1kg-300x300.png" alt="">
+                    </a>
                     <div class="product-content">
                         <h5 class="categories">Organic, Vegetable</h5>
                         <h3>Organic Jap Pumpkin 1kg</h3>
@@ -152,7 +160,9 @@
                     </div>
                 </div>
                 <div class="products-item">
-                    <img src="img/Organic-Kiwi-Fruit-500g-300x300.png" alt="">
+                    <a href="">
+                        <img src="img/Organic-Kiwi-Fruit-500g-300x300.png" alt="">
+                    </a>
                     <div class="product-content">
                         <h5 class="categories">Organic, Fruit, Packaged Meals</h5>
                         <h3>Organic Kiwi Fruit 500g</h3>
@@ -160,7 +170,9 @@
                     </div>
                 </div>
                 <div class="products-item">
-                    <img src="img/Organic-Mushrooms-150g-300x300.png" alt="">
+                    <a href="">
+                        <img src="img/Organic-Mushrooms-150g-300x300.png" alt="">
+                    </a>
                     <div class="product-content">
                         <h5 class="categories">Organic, Vegetable, Fruit, Baking</h5>
                         <h3>Organic Mushrooms, 250g</h3>
@@ -168,7 +180,9 @@
                     </div>
                 </div>
                 <div class="products-item">
-                    <img src="img/Organic-Parsley-300x300.png" alt="">
+                    <a href="">
+                        <img src="img/Organic-Parsley-300x300.png" alt="">
+                    </a>
                     <div class="product-content">
                         <h5 class="categories">Organic, Vegatable, Fruit, Packaged Meals</h5>
                         <h3>Organic Parsley</h3>
@@ -176,8 +190,10 @@
                     </div>
                 </div>
                 <div class="products-item">
-                    <img src="img/Organic-Sebago-Potatoes-1kg-300x300.png" alt="">
-                    <span class="featured">FEATURED</span>
+                    <a href="">
+                        <img src="img/Organic-Sebago-Potatoes-1kg-300x300.png" alt="">
+                        <span class="featured">FEATURED</span>
+                    </a>
                     <div class="product-content">
                         <h5 class="categories">Organic, Vegetable, Fruit</h5>
                         <h3>Organic Sebago Potatoes</h3>
