--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -222,19 +222,27 @@
     <div class="img-wall">
         <div class="photo">
             <img src="assets/asset 5.jpeg" alt="dog">
-            <a href="https://www.instagram.com/p/BVCkmfnF8di/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/p/BVCkmfnF8di/" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
         </div>
         <div class="photo">
             <img src="assets/asset 6.jpeg" alt="cat">
-            <a href="https://www.instagram.com/p/BVCklLUFQuc/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/p/BVCklLUFQuc/" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
         </div>
         <div class="photo">
             <img src="assets/asset 7.jpeg" alt="dog">
-            <a href="https://www.instagram.com/p/BVCkimWl71g/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/p/BVCkimWl71g/" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
         </div>
         <div class="photo">
             <img src="assets/asset 8.jpeg" alt="cat">
-            <a href="https://www.instagram.com/p/BVCkggnlT5G/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/p/BVCkggnlT5G/" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
         </div>
     </div>
 
