--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -203,6 +203,15 @@
             </div>
         </div>
     </div>
+    <div class="shop-now">
+        <div class="container">
+            <div class="shop-contain">
+                <h1>Fruits and Vegetables</h1>
+                <h3>Fresh and Delicious All Year Round!</h3>
+                <a href="">SHOP NOW!</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
