--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -205,10 +205,35 @@
     </div>
     <div class="shop-now">
         <div class="container">
-            <div class="shop-contain">
+            <div class="shop-content">
                 <h1>Fruits and Vegetables</h1>
                 <h3>Fresh and Delicious All Year Round!</h3>
                 <a href="">SHOP NOW!</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="products-type">
+        <div class="container">
+            <div class="products-type-img">
+                <img src="img/Untitled-1.png" alt="products-type">
+            </div>
+            <div class="products-type-content">
+                <div class="products-type-item">
+                    <h4>A Source of Vitamins</h4>
+                    <p>Vegetables can be eaten either raw or cooked and play an important role in human nutrition, being
+                        mostly low in fat and carbohydrates, but high in vitamins, minerals and dietary fiber.</p>
+                </div>
+                <div class="products-type-item">
+                    <h4>Best Quality Products</h4>
+                    <p>“We eliminated any possible pollution in our soils in order to deliver the purest organic produce
+                        to our customers’ tables.“</p>
+                </div>
+                <div class="products-type-item">
+                    <h4>Best Quality Products</h4>
+                    <p>“We eliminated any possible pollution in our soils in order to deliver the purest organic produce
+                        to our customers’ tables.“</p>
+                </div>
             </div>
         </div>
     </div>
