--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -501,6 +501,15 @@
             </div>
         </div>
     </div>
+
+    <div class="testimonials">
+        <div class="container">
+            <div class="testimonials-title">
+                <h3>Our Clients Testimonials</h3>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
