--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -510,6 +510,17 @@
         </div>
     </div>
 
+    <div class="subscribe">
+        <div class="container">
+            <div class="subscribe-title">
+                <h3>Subscribe Newsletter</h3>
+            </div>
+            <div class="input-group">
+                <input type="email" placeholder="Enter your email">
+                <a href="" class="subscribe-btn">SUBSCRIBE</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
