--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -521,6 +521,51 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <nav class="footer-nav nav1">
+                <h5 class="title">Categories</h5>
+                <ul>
+                    <li><a href="">New Products</a></li>
+                    <li><a href="">Our Stores</a></li>
+                    <li><a href="">Top sellers</a></li>
+                    <li><a href="">Uncategorized</a></li>
+                    <li><a href="">Your Health</a></li>
+                </ul>
+            </nav>
+            <nav class="footer-nav nav2">
+                <h5 class="title">Information</h5>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <nav class="footer-nav nav3">
+                <h5 class="title">My account</h5>
+                <ul>
+                    <li><a href="">Checkout</a></li>
+                    <li><a href="">Compare</a></li>
+                    <li><a href="">My account</a></li>
+                    <li><a href="">Wishlist</a></li>
+                </ul>
+            </nav>
+            <nav class="footer-nav nav4">
+                <h5 class="title">Store Information</h5>
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i>Address: 4578 Marmora Road, Glasgow</li>
+                    <li><i class="fas fa-phone-alt"></i>Phones: +3<a href="">(800) 2345-6789:</a><br>
+                        <a href="">+3(800)2345-6790</a></li>
+                    <li><i class="far fa-clock"></i>Hours: 7 Days a week from 9:00am to 7:00 pm</li>
+                    <li><i class="far fa-envelope"></i>E-mail: <a href="mailto:info@demolink.org">info@demolink.org</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 
 </html>
