--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -25,12 +25,7 @@
                         <i class="fas fa-shopping-cart"><span>CART:</span></i>
                         <span class="count">0</span>
                     </div>
-                    <form class="header-currency">
-                        <select name="currency">
-                            <option value="USD">USD,$</option>
-                            <option value="GBP">GBP,£</option>
-                        </select>
-                    </form>
+                    <a href="">USD,$ ▼</a>
                 </nav>
             </div>
         </div>
