--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -561,6 +561,17 @@
             </nav>
         </div>
     </footer>
+
+    <a class="totop" href="#"><span>↑</span></a>
+
+    <!-- <div class="popup">
+        <div class="popup-container-img">
+            <span>X</span>
+            <div class="popup-check">
+                <span>Don't show again</span>
+            </div>
+        </div>
+    </div> -->
 </body>
 
 </html>
