--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 
         .hw-list {
             font-size: 20px;
-
         }
 
         .hw-list a {
             text-decoration: none;
             line-height: 2em;
+            color: #0066ff;
         }
 
         .hw-list a:hover {
