分頁圖片、title修改

--- a/BSHomeWork2/index.html
+++ b/BSHomeWork2/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anilove</title>
     <link rel="stylesheet" href="all.css">
     <script src="https://kit.fontawesome.com/05c128ff7b.js" crossorigin="anonymous"></script>
     <link rel="Shortcut Icon" type="image/x-icon" href="assets/asset 0.png" />
