--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Naturio</title>
     <script src="https://kit.fontawesome.com/05c128ff7b.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="Shortcut Icon" type="image/x-icon" href="img/cropped-FAV-78x78.png" />
     <link rel="stylesheet" href="all.css">
 </head>
 
