--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -49,7 +49,7 @@
     <div class="shop-onsale">
         <div class="container">
             <div class="shop-onsale-title">
-                <h1>Green Leaves Up To <span>20% Off</span></h1>
+                <h1>Green Leaves<br>Up To <span>20% Off</span></h1>
                 <h3>Always Fresh, Crispy and Full of Vitamins</h3>
                 <a href="">ADD TO CART</a>
             </div>
