--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -24,7 +24,7 @@
                     <a href="">LOGIN</a>
                     <div class="cart">
                         <i class="fas fa-shopping-cart"><span>CART:</span></i>
-                        <span class="count">0</span>
+                        <span class="cart-count">0</span>
                     </div>
                     <a href="">USD,$ ▼</a>
                 </nav>
@@ -36,12 +36,12 @@
                     <a href=""><img src="img/logo.png" alt="Naturio"></a>
                 </div>
                 <nav class="header-navi">
-                    <a href="#">HOME</a>
-                    <a href="#">ABOUT</a>
-                    <a href="#">FEATURES ▼</a>
-                    <a href="#">BLOG ▼</a>
-                    <a href="#">SHOP ▼</a>
-                    <a href="#">CONTACTS</a>
+                    <a href="#" class="nav-link">HOME</a>
+                    <a href="#" class="nav-link">ABOUT</a>
+                    <a href="#" class="nav-link">FEATURES ▼</a>
+                    <a href="#" class="nav-link">BLOG ▼</a>
+                    <a href="#" class="nav-link">SHOP ▼</a>
+                    <a href="#" class="nav-link">CONTACTS</a>
                 </nav>
             </div>
         </div>
