popup撰寫，測試，註解

--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -562,14 +562,21 @@
 
     <a class="totop" href="#"><span>↑</span></a>
 
-    <!-- <div class="popup">
-        <div class="popup-container-img">
-            <span>X</span>
-            <div class="popup-check">
-                <span>Don't show again</span>
-            </div>
-        </div>
-    </div> -->
+    <!-- <div class="popup"></div> -->
 </body>
+
+<!-- <script>
+    var html = `
+                <div class="popup-container-img">
+                        <span>X</span>
+                        <div class="popup-check">
+                            <span>Don't show again</span>
+                        </div>
+                </div>                
+                `;
+    setTimeout(function () {
+        document.querySelector(".popup").innerHTML = html;
+    }, 5000); //延遲 5 秒
+</script> -->
 
 </html>
