popup視窗加入js彈出＆關閉功能

--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="Shortcut Icon" type="image/x-icon" href="img/cropped-FAV-78x78.png" />
     <link rel="stylesheet" href="all.css">
+    <script src="js/all.js"></script>
 </head>
 
 <body>
@@ -562,21 +563,7 @@
 
     <a class="totop" href="#"><span>↑</span></a>
 
-    <!-- <div class="popup"></div> -->
+    <div class="popup"></div>
 </body>
-
-<!-- <script>
-    var html = `
-                <div class="popup-container-img">
-                        <span>X</span>
-                        <div class="popup-check">
-                            <span>Don't show again</span>
-                        </div>
-                </div>                
-                `;
-    setTimeout(function () {
-        document.querySelector(".popup").innerHTML = html;
-    }, 5000); //延遲 5 秒
-</script> -->
 
 </html>
