--- a/BSHomeWork3/index.html
+++ b/BSHomeWork3/index.html
@@ -501,6 +501,19 @@
             <div class="testimonials-title">
                 <h3>Our Clients Testimonials</h3>
             </div>
+            <div class="testimonials-item">
+                <img src="img/testi.jpg" alt="woman">
+                <h4 class="title">66</h4>
+                <p class="content">Thank you, Naturio, for remarkable discount you provided me! I became a regular buyer
+                    because my
+                    family and relatives now adore your products. We also shipped it to our overseas friends as such
+                    products are hard to find elsewhere!</p>
+                <div class="testimonials-footer">
+                    <span class="name">Amanda Appleboum</span>
+                    <br>
+                    <span>Customer</span>
+                </div>
+            </div>
         </div>
     </div>
 
